<resources>
    <string name="app_name">Pizzeria</string>
    <string name="get_backend_message">Get Backend Message</string>
    <string name="proceed_checkout">Proceed to Checkout</string>
    <string name="checkout_buy">Buy now</string>
    <string name="enter_address">Enter Address</string>
    <string name="add_note">Add Note</string>
    <string name="PLZ">ZIP</string>
    <string name="menu">Menu</string>
    <string name="basket">Basket</string>
    <string name="checkout">Checkout</string>

    <string name="sum">Sum:</string>
    <string name="delivery_costs">Delivery fee:</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="login_title">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="pizzas">Pizzas</string>
    <string name="drinks">Drinks</string>
    <string name="invalid_username">Username should not be empty</string>
    <string name="registration_failed_error">Registration failed</string>
    <string name="authentication_failed_error">Authentication failed</string>
    <string name="logout">Logout</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="or">Or</string>
    <string name="validation_empty">Field should not be empty</string>
    <string name="validation_invalid_email">Invalid email</string>
    <string name="validation_invalid_password">Password should be at least 8 characters long</string>
    <string name="choose_toppings">Choose up to 5 toppings:</string>
    <string name="delivery">Delivery</string>
    <string name="in_process">In process</string>
    <string name="ordered">Ordered</string>
    <string name="change_order_status">Change order status:</string>
    <string name="selected_products">Selected Products:</string>
    <string name="price">Price:</string>
    <string name="make_custom_pizza">"Press to make your own pizza!"</string>
</resources>